--- a/BlockadeHax.vcxproj.filters
+++ b/BlockadeHax.vcxproj.filters
@@ -20,9 +20,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="VRMeme.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Console.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -35,7 +32,7 @@
     <ClInclude Include="PlayerManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
+    <ClInclude Include="BlockadeHax.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
